feat: Implement photo details screen and EXIF metadata extraction
This commit introduces the photo details screen, which is displayed after a user captures an image. It includes functionality for saving the image, extracting its metadata, and displaying it to the user.

- **Photo Details Screen:**
    - Adds the `PhotoDetailsPage`, which appears after an image is captured from the camera screen.
    - Implements navigation from the camera page to the details page, passing the captured image file.
    - The UI displays the captured image, detailed metadata, and a "Retake Photo" button to return to the camera.
    - Uses `flutter_bloc` for state management (`PhotoDetailsBloc`).

- **Image Metadata Extraction:**
    - Introduces a `FileHelper` utility to handle file operations.
    - Implements logic to save the captured image to the application's documents directory.
    - Extracts and displays image metadata, including:
        - Resolution (width × height).
        - File size.
        - Storage path.
        - Timestamp.
        - EXIF orientation (e.g., "Up (0°)", "Right (90°)").
    - Adds the `native_exif` and `path_provider` dependencies for this functionality.

- **Camera & State Management Refinements:**
    - Introduces a `BlocStatus` enum (`initial`, `loading`, `success`, `failure`) to manage states more robustly in both `CameraBloc` and `PhotoDetailsBloc`.
    - Replaces boolean flags like `isCameraInitialized` with the `BlocStatus` enum for clearer loading and error handling.
    - Centralizes the circular progress indicator into a reusable `Loader` widget.

- **UI and Theming:**
    - Adds new colors (`customLightGray`) to the app's theme.
    - Implements custom fade transitions for routing.
    - Adds new localized strings for the photo details screen.
    - Minor refinement to the crosshair design.

- **Configuration:**
    - Adds an `intlGenerate` command to the `Makefile`.
    - Updates `pubspec.yaml` and `pubspec.lock` with new dependencies.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,9 @@ dependencies:
   flutter_bloc: ^9.1.1
   camera: ^0.11.3
   built_value: ^8.12.3
-  collection: ^1.19.1
   permission_handler: ^12.0.1
+  path_provider: ^2.1.5
+  native_exif: ^0.6.2
 
 dev_dependencies:
   flutter_test:
