--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   build_runner: ^2.10.5
   built_value_generator: ^8.12.2
+  path_provider_platform_interface: ^2.1.2
+  permission_handler_platform_interface: ^4.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
