--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dev_dependencies:
   built_value_generator: ^8.12.2
   path_provider_platform_interface: ^2.1.2
   permission_handler_platform_interface: ^4.3.0
+  flutter_native_splash: ^2.4.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
